@@ -88,30 +88,32 @@ void CEcoCompteur::Do_Work()
 
 void CEcoCompteur::GetScript()
 {
+	std::string sInst, sLog2;
+
 	// Download instantaneous wattage
-	std::string sInst;
-	std::string sUrl = m_url + "/inst.json";
-	if (!HTTPClient::GET(sUrl, sInst))
+	std::stringstream szURL;
+	szURL << m_url << ":" << m_port << "/inst.json";
+	if (!HTTPClient::GET(szURL.str(), sInst))
 	{
 		_log.Log(LOG_ERROR, "EcoCompteur: Error getting 'inst.json' from url : " + m_url);
 		return;
 	}
 
 	// Download hourly report
-	std::string sLog2;
-	sUrl = m_url + "/log2.csv";
-	if (!HTTPClient::GET(sUrl, sLog2))
+	std::stringstream szLogURL;
+	szLogURL << m_url << ":" << m_port << "/log2.csv";
+	if (!HTTPClient::GET(szLogURL.str(), sLog2))
 	{
 		_log.Log(LOG_ERROR, "EcoCompteur: Error getting 'log2.csv' from url : " + m_url);
 		return;
 	}
 
-	// Parsing inst.json
+	// Parse inst.json
 	Json::Value root;
 	Json::Reader jReader;
 	jReader.parse(sInst, root);
 
-	// Parsing log2.csv
+	// Parse log2.csv
 	if (sLog2.length() == 0)
 	{
 		_log.Log(LOG_ERROR, "EcoCompteur: log2.csv looks empty");
